--- a/index.html
+++ b/index.html
@@ -4,65 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ReelMind AI Studio</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        darkMode: 'class',
-        theme: {
-          extend: {
-            colors: {
-              cyber: {
-                black: '#050505',
-                dark: '#0a0a0f',
-                gray: '#1a1a24',
-                primary: '#00f0ff', // Cyan
-                secondary: '#ff003c', // Magenta
-                accent: '#fcee0a', // Yellow
-                text: '#e0e0e0'
-              }
-            },
-            fontFamily: {
-              mono: ['ui-monospace', 'SFMono-Regular', 'Menlo', 'Monaco', 'Consolas', "Liberation Mono", "Courier New", 'monospace'],
-            },
-            animation: {
-              'pulse-fast': 'pulse 1.5s cubic-bezier(0.4, 0, 0.6, 1) infinite',
-              'glow': 'glow 2s ease-in-out infinite alternate',
-            },
-            keyframes: {
-              glow: {
-                '0%': { boxShadow: '0 0 5px #00f0ff, 0 0 10px #00f0ff' },
-                '100%': { boxShadow: '0 0 20px #00f0ff, 0 0 30px #00f0ff' }
-              }
-            }
-          },
-        }
-      }
-    </script>
-    <style type="text/tailwindcss">
-      @layer utilities {
-        .clip-path-slant {
-          clip-path: polygon(10px 0, 100% 0, 100% calc(100% - 10px), calc(100% - 10px) 100%, 0 100%, 0 10px);
-        }
-      }
-      body {
-        background-color: #050505;
-        color: #e0e0e0;
-      }
-      /* Custom scrollbar */
-      ::-webkit-scrollbar {
-        width: 8px;
-      }
-      ::-webkit-scrollbar-track {
-        background: #0a0a0f; 
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #333; 
-        border-radius: 4px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #00f0ff; 
-      }
-    </style>
   <script type="importmap">
 {
   "imports": {
@@ -76,6 +17,7 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
